@@ -34,12 +34,20 @@ extern "C" {
 */
 
 /*! \fn void ln_get_equ_prec (struct ln_equ_posn * mean_position, double JD, struct ln_equ_posn * position);
-* \brief Calculate the effects of precession on equatorial coordinates.
+* \brief Calculate the effects of precession on equatorial coordinates, convert current to J2000.
 * \ingroup precession
 */
 
 /* Equ 20.2, 20.3, 20.4 pg 126 */
 void ln_get_equ_prec (struct ln_equ_posn * mean_position, double JD, struct ln_equ_posn * position);
+
+/*! \fn void ln_get_equ_prec2 (struct ln_equ_posn * mean_position, double fromJD, double toJD, struct ln_equ_posn * position);
+* \brief Calculate the effects of precession on equatorial coordinates, between arbitary Jxxxx epochs.
+* \ingroup precession
+*/
+
+/* Equ 20.2, 20.3, 20.4 pg 126 */
+void ln_get_equ_prec2 (struct ln_equ_posn * mean_position, double fromJD, double toJD, struct ln_equ_posn * position);
 
 /*! \fn void ln_get_ecl_prec (struct ln_lnlat_posn * mean_position, double JD, struct ln_lnlat_posn * position); 
 * \brief Calculate the effects of precession on ecliptical coordinates.
