@@ -1,8 +1,19 @@
 ChangeLog
 
+20050906
+        -src/precession.c
+
+	Add ln_get_equ_prec2 to calculate precission between arbitary dates.
+
+	-src/libnova/ln_types.h
+
+	JD2000 #define.
+
+	Petr Kubanek
+
 20050717
 	-src/rise_set.c
-	-src/libnova/rise_set.c
+	-src/libnova/rise_set.h
 
 	Add LN_SIDEREAL_DAY_SEC and LN_SIDEREAL_DAY_DAY #defines, fix error
 	in ln_get_object_next_rst (infinite loop in while on some special
